--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,27 @@
+#project generated files
+modelconfig.txt
+configmodel.txt
+models/**/
+hf_download/
+outputs/
+temp/
+# Environments
+.env
+.venv
+env/
+venv/
+ENV/
+env.bak/
+venv.bak/
+.env*/
+
+# Byte-compiled / optimized / DLL files
+__pycache__/
+*.py[cod]
+*$py.class
+
+
+
 **/__pycache__/**
 
 *.ckpt
@@ -35,3 +59,7 @@ dependencies/TensorRT/
 *.jpg
 *.exe
 .thumbnails
+
+#MacOS
+
+**/.DS_Store
